# COMP2150---A2

./: A2  A2-official-data-output.txt  A2main.cpp  Burst.cpp  Burst.h  CMakeLists.txt  Catch2.h  CatchTests  CatchTests.cpp  CompleteCPU.cpp  CompleteCPU.h  CompleteIO.cpp  CompleteIO.h  Event.cpp  Event.h  Exit.cpp  Exit.h  FileReader.cpp  FileReader.h  ListItem.cpp  ListItem.h  Makefile  Node.cpp  Node.h  ParentQueue.cpp  ParentQueue.h  PriorityQueue.cpp  PriorityQueue.h  Process.cpp  Process.h  ProcessArrival.cpp  ProcessArrival.h  Queue.cpp  Queue.h  README.txt  Simulation.cpp  Simulation.h  StartCPU.cpp  StartCPU.h  StartIO.cpp  (+6 more)
